@startuml
class com.dutianze.designpattern.behavioral.bridge.enchantment.SoulEatingEnchantment {
+ void onActivate()
+ void apply()
+ void onDeactivate()
}
interface com.dutianze.designpattern.behavioral.bridge.enchantment.Enchantment {
~ void onActivate()
~ void apply()
~ void onDeactivate()
}
class com.dutianze.designpattern.behavioral.bridge.enchantment.FlyingEnchantment {
+ void onActivate()
+ void apply()
+ void onDeactivate()
}
class com.dutianze.designpattern.behavioral.bridge.weapon.Sword {
- Enchantment enchantment
+ void wield()
+ void swing()
+ void unwield()
+ Enchantment getEnchantment()
}
class com.dutianze.designpattern.behavioral.bridge.weapon.Hammer {
- Enchantment enchantment
+ void wield()
+ void swing()
+ void unwield()
+ Enchantment getEnchantment()
}
interface com.dutianze.designpattern.behavioral.bridge.weapon.Weapon {
~ void wield()
~ void swing()
~ void unwield()
~ Enchantment getEnchantment()
}


com.dutianze.designpattern.behavioral.bridge.enchantment.Enchantment <|.. com.dutianze.designpattern.behavioral.bridge.enchantment.SoulEatingEnchantment
com.dutianze.designpattern.behavioral.bridge.enchantment.Enchantment <|.. com.dutianze.designpattern.behavioral.bridge.enchantment.FlyingEnchantment
com.dutianze.designpattern.behavioral.bridge.weapon.Weapon <|.. com.dutianze.designpattern.behavioral.bridge.weapon.Sword
com.dutianze.designpattern.behavioral.bridge.weapon.Weapon <|.. com.dutianze.designpattern.behavioral.bridge.weapon.Hammer
@enduml